--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
     <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="#18181b" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   </head>
 
   <body>
